--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="icon" href="/resources/player.gif" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/all.min.css" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <!-- <link rel="stylesheet" href="/css/setName.css"> -->
+    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/base.css" />
+    <link rel="stylesheet" href="/css/nav.css" />
+    <link rel="stylesheet" href="/css/setting.css" />
+    <link rel="stylesheet" href="/css/leaderboard.css">
+    <!-- <link rel="stylesheet" href="/css/style.css"> -->
   </head>
   <body>
     <div class="container-fluid">
@@ -65,6 +69,7 @@
         <div id="bot" style="width: 50px; height: 50px; bottom: 0; right: 0">
           <img src="/resources/bot.gif" />
         </div>
+
         <!-- setName -->
         <div id="settings-section">
           <!-- Close Icon -->
@@ -86,14 +91,14 @@
 
             <div id="selectDiv">
               <label for="levelSelect" class="form-label player-name"
-              >Choose Level</label
-            >
-            <select id="levelSelect">
-              <option value="mild">Mild</option>
-              <option value="spicy">Spicy</option>
-              <option value="fiery">Fiery</option>
-              <option value="extreme">Extreme</option>
-            </select>
+                >Choose Level</label
+              >
+              <select id="levelSelect">
+                <option value="mild">Mild</option>
+                <option value="spicy">Spicy</option>
+                <option value="fiery">Fiery</option>
+                <option value="extreme">Extreme</option>
+              </select>
             </div>
 
             <button type="submit" class="btn btn-success w-50" id="start">
